Scrap Metal 3/ScrapMetal3.json - Line 4-6
Scrap Metal 3/index.html - Line 13
[Removed] Subway Surfers/index.html - Line 10
Subway Surfers/Build/SanFrancisco.json - Line 5-7
[Removed] Papery Planes/master-loader.js Line 18
Papery Planes/poki-sdk.js - Line 120
Papery Planes/ppw.json - Line 5-7
Death Run 3D/Build/death_run_wasm_v1.json - Line 3-5
Worlds Hardest Game/preloader.js - Line 29
Friday Night Funkin/Funkin.js - Like the whole thing, use copy to replace
Basketball Stars/index.html - Line 78, 74, 18, 21-24
Basketball Stars/assets/basketball_legends_2019.min.js - A lot of the file